Revert "Merge pull request #4 from XPH0904/Backend"
This reverts commit 6899bf460dc150909cad7070cb092243a750ee4d, reversing
changes made to d7876bd87bdaaf4a7bc1347b216c9d5959a95ad0.
