# Backend/Library-Management-System/app/Http/Controllers/API/V1/LoginController.php
@@ -108,8 +108,6 @@ class LoginController extends Controller
 
         return response([
             'message' => 'Login Successfully',
-            'name' => $user["name"],
-            'email' => $user["email"],
             'token' => $token
         ]);
 
@@ -118,33 +116,7 @@ class LoginController extends Controller
     public function user(){
         return Auth::user();
     }
-    /**
-     * @OA\Get(
-     *     path="/delete/{id}",
-     *     tags={"User"},
-     *     summary="show",
-     *     description="Delete specific User",
-     *     operationId="Delete",
-     *     @OA\Parameter(
-     *         name="id",
-     *         in="path",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="integer",
-     *             maximum=10,
-     *             minimum=1
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=200,
-     *         description="Delete User Sucessfully",
-     *     ),
-     *     @OA\Response(
-     *         response=404,
-     *         description="User Not Exist",
-     *     ),
-     * )
-     */
+
     public function destory($id){
         $user = User::find($id);
         if (!$user){
