# Backend/Library-Management-System/storage/api-docs/api-docs.json
@@ -30,55 +30,6 @@
                         "bearerAuth": []
                     }
                 ]
-            },
-            "post": {
-                "tags": [
-                    "books"
-                ],
-                "summary": "store",
-                "description": "Store Book List",
-                "operationId": "store",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "nameBook": {
-                                        "type": "string"
-                                    },
-                                    "price": {
-                                        "type": "double"
-                                    },
-                                    "type": {
-                                        "type": "string"
-                                    },
-                                    "author": {
-                                        "type": "string"
-                                    },
-                                    "publisher": {
-                                        "type": "string"
-                                    }
-                                },
-                                "type": "object",
-                                "example": {
-                                    "nameBook": "Sample1",
-                                    "price": 13.6,
-                                    "type": "Fantasy",
-                                    "author": "SampleAuthor",
-                                    "publisher": "SamplePublisher"
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Return Book Content"
-                    },
-                    "406": {
-                        "description": "The Content is not completed"
-                    }
-                }
             }
         },
         "/books/{id}": {
@@ -114,272 +65,6 @@
                         "bearerAuth": []
                     }
                 ]
-            },
-            "put": {
-                "tags": [
-                    "books"
-                ],
-                "summary": "update",
-                "description": "Update specific books",
-                "operationId": "update",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "maximum": 10,
-                            "minimum": 1
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful Operation"
-                    },
-                    "404": {
-                        "description": "Book Not Found"
-                    },
-                    "406": {
-                        "description": "The Content is not completed"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            },
-            "delete": {
-                "tags": [
-                    "books"
-                ],
-                "summary": "show",
-                "description": "Show specific books",
-                "operationId": "show",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "maximum": 10,
-                            "minimum": 1
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful Operation"
-                    },
-                    "404": {
-                        "description": "Book Not Found"
-                    },
-                    "503": {
-                        "description": "Book has been borrowed"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
-        "/borrows": {
-            "get": {
-                "tags": [
-                    "borrows"
-                ],
-                "summary": "index",
-                "description": "Returns all Borrowed Books List",
-                "operationId": "index",
-                "responses": {
-                    "200": {
-                        "description": "Successful Operation"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            },
-            "post": {
-                "tags": [
-                    "borrows"
-                ],
-                "summary": "borrow book",
-                "description": "Borrow a Book",
-                "operationId": "store",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "idReader": {
-                                        "type": "integer"
-                                    },
-                                    "idBook": {
-                                        "type": "integer"
-                                    },
-                                    "lendDate": {
-                                        "type": "string",
-                                        "format": "date"
-                                    },
-                                    "dueDate": {
-                                        "type": "string",
-                                        "format": "date"
-                                    }
-                                },
-                                "type": "object",
-                                "example": {
-                                    "idReader": 1,
-                                    "idBook": 1,
-                                    "lendDate": "2021-09-28",
-                                    "dueDate": "2021-10-12"
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Successfully Borrow a Book"
-                    },
-                    "406": {
-                        "description": "The Content is not completed"
-                    }
-                }
-            }
-        },
-        "/lists": {
-            "get": {
-                "tags": [
-                    "lists"
-                ],
-                "summary": "index",
-                "description": "Returns all Haven't Borrowed Books List",
-                "operationId": "indexBorrowable",
-                "responses": {
-                    "200": {
-                        "description": "Successful Operation"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
-        "/borrows/{id}": {
-            "get": {
-                "tags": [
-                    "borrows"
-                ],
-                "summary": "borrow",
-                "description": "Show User Borrowed books",
-                "operationId": "show",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "maximum": 10,
-                            "minimum": 1
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful Operation"
-                    },
-                    "404": {
-                        "description": "Book Not Exist"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            },
-            "delete": {
-                "tags": [
-                    "borrows"
-                ],
-                "summary": "destory",
-                "description": "Destory specific books",
-                "operationId": "destory",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "maximum": 10,
-                            "minimum": 1
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful Operation (Return Remaining Borrow Books List)"
-                    },
-                    "404": {
-                        "description": "This Reader Doesn't Borrow the Book"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
-        "admin/borrows": {
-            "post": {
-                "tags": [
-                    "borrows"
-                ],
-                "summary": "Return user's book",
-                "description": "Return Selected User Borrowed Book",
-                "operationId": "adminDestory",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "idReader": {
-                                        "type": "integer"
-                                    },
-                                    "idBook": {
-                                        "type": "integer"
-                                    }
-                                },
-                                "type": "object",
-                                "example": {
-                                    "idReader": 1,
-                                    "idBook": 1
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Return Selected User Borrowed Books"
-                    },
-                    "404": {
-                        "description": "This Reader Doesn't Borrow the Book"
-                    }
-                }
             }
         },
         "/register": {
@@ -473,47 +158,9 @@
                     }
                 }
             }
-        },
-        "/delete/{id}": {
-            "get": {
-                "tags": [
-                    "User"
-                ],
-                "summary": "show",
-                "description": "Delete specific User",
-                "operationId": "Delete",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "maximum": 10,
-                            "minimum": 1
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Delete User Sucessfully"
-                    },
-                    "404": {
-                        "description": "User Not Exist"
-                    }
-                }
-            }
         }
     },
     "components": {
-        "responses": {
-            "503": {
-                "description": "Book has been borrowed"
-            },
-            "406": {
-                "description": "The Content is not completed"
-            }
-        },
         "securitySchemes": {
             "bearerAuth": {
                 "type": "http",
@@ -526,14 +173,6 @@
         {
             "name": "books",
             "description": "Everything about the Books"
-        },
-        {
-            "name": "borrows",
-            "description": "Everything about User Borrowed Books"
-        },
-        {
-            "name": "lists",
-            "description": "Everything about Haven't Borrowed Books"
         },
         {
             "name": "Login",
